WICKET-6102 StackoverflowError related to enclosures
Use EnclosureContainer instead of InlineEnclosure

--- a/bootstrap-core/src/main/java/de/agilecoders/wicket/core/markup/html/bootstrap/navbar/Navbar.html
+++ b/bootstrap-core/src/main/java/de/agilecoders/wicket/core/markup/html/bootstrap/navbar/Navbar.html
@@ -19,12 +19,12 @@
                 </div>
 
                 <div class="collapse navbar-collapse" role="navigation" wicket:id="collapse">
-                    <ul wicket:enclosure="navLeftList" class="nav navbar-nav">
+                    <ul wicket:id="navLeftListEnclosure" class="nav navbar-nav">
                         <li wicket:id="navLeftList">
                             <div wicket:id="component">[[CONTENT]]</div>
                         </li>
                     </ul>
-                    <ul wicket:enclosure="navRightList" class="nav navbar-nav navbar-right">
+                    <ul wicket:id="navRightListEnclosure" class="nav navbar-nav navbar-right">
                         <li wicket:id="navRightList">
                             <div wicket:id="component">[[CONTENT]]</div>
                         </li>
